# reflex-dom-mobile

./: .gitignore  README.md  default.nix  index.html  make-android.sh  make-ios.sh  overrides.nix  reflex-platform.nix
app-back/: .gitignore  app-back.cabal  cabal.project  serve.sh
app-back/app/: Main.hs
app-back/src/App/: Backend.hs
app-front/: .gitignore  app-front.cabal  build.sh  cabal.project
app-front/app/: Main.hs
app-front/cbits/: android.c
app-front/src-android/App/Frontend/: Android.hsc
app-front/src/App/: Frontend.hs
app-front/src/App/Frontend/: Style.hs
app-front/src/App/Frontend/Style/: TH.hs
app-front/statics/: index.html
app-shared/: LICENSE  app-shared.cabal
app-shared/src/App/: Shared.hs
js/: all.js
